@@ -2,8 +2,6 @@ AUX 0001-gitlab-gitaly-0.10.0-fix-Makefile.patch 248 SHA256 03b4315da76b4409e990
 AUX 0001-gitlab-gitaly-0.23.0-fix-Makefile.patch 253 SHA256 e1a3d0ea2d10145dd9d9b10848fb1731758eb16426ae203fa5a0abab65633380 SHA512 485178891a9589e29f0735bfbb8f1557355881f50498b46185ea6e658214454beed7350aab412699318ee801d8899824177d7d20568e91eb4ddf7562e9e8b9a2 WHIRLPOOL b2088784e30eaf8bb46832cb8454e5a8d2f2eeab00b41ffd021d257b6f19ffc53a420ed7123b1c9b9a83fd8a87184c178a3334d391bc4d85b78b8893245dfc03
 AUX 0002-gitlab-gitaly-0.11.2-fix-config.toml.example.patch 700 SHA256 7f5c3f840581c2c2e98741ad6fcb9b486948dbcd80f52f4c45538b9fe9009087 SHA512 e89636c4e38697fad62553e8b07677fdc0fef5b83249ce79f748e1da7300c28514cdbf7a182232ced95222c9578cc9028de5e039b82f31175c22d840c83c0286 WHIRLPOOL 2b9c2b2b96da648b5f71a4ee8940c2a0a148e9005178e012afc73dd7709a5c407e04240adfb96a4ea3d2384248a23682a8d5727c967ddd5368f0d2d3b38d24e5
 AUX 0002-gitlab-gitaly-0.35.0-fix-config.toml.example.patch 1015 SHA256 44cd87bb35224634ef9832f2d1e79de2ab27580101665a049eaf20f5ffae590d SHA512 9110e6f42babac04c98227ecfff3a961ec35fe6c487559e5a638676f409dbf6b0b133524b092322085cb7c7c41c5fc729c7b6be80bae10931efd5785172f01b2 WHIRLPOOL 8b0f1aa8c8c9c2ea4a8a5dbfd1e5a00603d587209b0967be82a9d78d0eabe4d350ac44fce80bfc9dac77ea2c0ff5d0f954e8cb4fb50ee778fb636599b1d8456f
-AUX gitlab-gitaly-0.10.0.conf 281 SHA256 54a309ecd95a0c907951a36db5542678f9e68c7e354dcc3278882512a82c5a99 SHA512 23875632a1c523eea855c10b03dab4a2aa38cc8de6be070df4ba8c85360edf8c5c2a636601f05004f62792c9e4304822c679841180b9a23c963de76a7c770873 WHIRLPOOL fac7949ddc161d2df6d4f0168029c405a0b68f64fee9cedf167bdab9ea55de1e52735476402e878f67339f969e40bd341cd21f31c99dd86d997df08a3ce8f217
-AUX gitlab-gitaly-0.10.0.init 592 SHA256 31889dd48b19bd84aaeb64f943ea9ff173b7a2291b3f0dd465c08256d2aee9ee SHA512 81db4434946691a714945e2fab06e302c0994805b4b285e916363461160b30c919e9373d10e293eb2163dc46f132d1c6f4a5c9ab50cad3933827833d48a2832b WHIRLPOOL 1d7287c5dd41a8c63070467640bcf6f5c5fd66a03e7a75ddc000ab67860dd1f76098a78edc36af64ebd34deda103f2284bebcb153906a79310ac9808cfe75a76
 AUX gitlab-gitaly-0.11.2.conf 289 SHA256 da2640e0ac6a3f356d68f2825c78a1965703df292cd6631b2e884e1a9c7ecc87 SHA512 86f2b4dd283de117c3a371a98a1472d248a21a2c931be6644bec2406249e000fe2e55d031b523d6e64fa2eaa3addad27704f338f65cad6b559680c5c327b9614 WHIRLPOOL 18cb38b35c9a79c6eaaa15ed9bbbeb6dc502a0291f3bff2bf1f59a950556c4c3fd3742a4097ab784c1e9a12d2209b336f2bf688b0888e13bb1b7f78219bb6d87
 AUX gitlab-gitaly-0.11.2.init 631 SHA256 32257b9e72c2ee201e5104f6eafc134920237f0f5465110edda4778dd92c17a2 SHA512 a0bf57f392a75b1a2875837ec1ad47b61317c6ae530d12e60ae3f62f69b0fb8ef48499b31751fab788df1a6ab842926a73443795a5888258f62e473e2953299a WHIRLPOOL 8185d1927c021be4b3de7c4e0228c68cba558b35c0894c6b17de7f24ebc42dd771593b2d9169f27c5a1ada90e14b2fdb651521ddf39660a77dece586c7f1d348
 DIST gitlab-gitaly-0.10.0.tar.bz2 693273 SHA256 44a4a68beb75b464b35fd003cf47a9bc483bb6bbcc8ab4bd4ef87a75329a3747 SHA512 1d7b2d38d68ceaacde03d0ba2cbec19f730527af6a0d56fd92c03f41a4d11c4e5db5c5cc2bd363a8ccfc0f5bf3fb678aec4b17e5996ccc7f1898a78e4598cc1a WHIRLPOOL 737ff05c6992e90eab9ba38a721cf699d87ea1ef84005dbaa16d37ef3c33cec9607571b0421412bba3efd2bf88267ff7d624e57ac92cc08b14c3b8801779c455
@@ -11,11 +9,10 @@ DIST gitlab-gitaly-0.3.0.tar.bz2 621097 SHA256 60404ae78b6551e7258a30fa615d7d8c2
 DIST gitlab-gitaly-0.6.0.tar.bz2 687192 SHA256 ead87c0da129c075011a55e5b2138febf11fd5146dd62763fc9d4b5d8725840d SHA512 f1e8e337192af02b42087604eb90fab3af73ef3753a07af368b1784462a0c1f8b1d166952b8d4e9c25c93228625195be42b4d3dfad0a70bea0520956acf2522f WHIRLPOOL 283899fb6c3fed332731d06ea42cf76ee5de433849b0784eb78b76391d15ca5feeb36fa9d28f3a90962f378c1c485eb0653a62090dbb6aae8bc87965d534da34
 EBUILD gitlab-gitaly-0.10.0.ebuild 776 SHA256 08e08d43d9ec359f418d13cdfbd7c2560c236f8102cb2cc16739569ad112ac1e SHA512 7be112d99f8dc1353af718bc7551fb5c9e616179ce494853b60f77a099850abc689f25b0587db056ef1dd90dfa90b77cba72d6afb8e663841e0162667d4b7628 WHIRLPOOL ec245d5028174a264730997fa66907a187a7ef58ed4cecfb287bead932b8cbd2f2073311f0b8f5f8c5381e11a4c811dd5738e8bd0d357183f0fb3706e909899d
 EBUILD gitlab-gitaly-0.11.2-r1.ebuild 925 SHA256 5a12499e0abada1e9351fcc25cf2dc882f577d9a0cdcd63a7f1819001664faeb SHA512 9752b120d754e95d96a432315171503329c9562448aad498d3aac091be12fcfbf2c617d74430f6578dbcea613981608d8369acc388f0238a4d29ab7c978c2a28 WHIRLPOOL af91a99bd879fac0fe1c29e5d9fb7a93ca8939bfb0bbf51ea9ddd43dd46867e8e918d1598176d3c85b53e6b9b27d07ff325d5856a3106e2402071870e886c059
-EBUILD gitlab-gitaly-0.16.0.ebuild 925 SHA256 5a12499e0abada1e9351fcc25cf2dc882f577d9a0cdcd63a7f1819001664faeb SHA512 9752b120d754e95d96a432315171503329c9562448aad498d3aac091be12fcfbf2c617d74430f6578dbcea613981608d8369acc388f0238a4d29ab7c978c2a28 WHIRLPOOL af91a99bd879fac0fe1c29e5d9fb7a93ca8939bfb0bbf51ea9ddd43dd46867e8e918d1598176d3c85b53e6b9b27d07ff325d5856a3106e2402071870e886c059
 EBUILD gitlab-gitaly-0.21.2.ebuild 925 SHA256 5a12499e0abada1e9351fcc25cf2dc882f577d9a0cdcd63a7f1819001664faeb SHA512 9752b120d754e95d96a432315171503329c9562448aad498d3aac091be12fcfbf2c617d74430f6578dbcea613981608d8369acc388f0238a4d29ab7c978c2a28 WHIRLPOOL af91a99bd879fac0fe1c29e5d9fb7a93ca8939bfb0bbf51ea9ddd43dd46867e8e918d1598176d3c85b53e6b9b27d07ff325d5856a3106e2402071870e886c059
 EBUILD gitlab-gitaly-0.23.0.ebuild 925 SHA256 7294cc955fc5eedf9bcadfef76572dc1d972165e67de09273bc4159b699e4e4c SHA512 d624de4a9f2f63625669df32ffc0a16e63c356d7f3b0da6be68fe2f0f3c58399ccd8f1c0d1897c1e20fd7e67508133381f4f9e099bd8b929e64042131816e228 WHIRLPOOL f0e4093efa0372249bdc54ee8f4cdb4318f0fd85296964c2412f5b4ca0933677566733b68f64e53b68480d3246126e2e030fac99e962d510a1010907b2d5dac9
 EBUILD gitlab-gitaly-0.3.0.ebuild 776 SHA256 8d916fec7805c40859db18bc558abb8fd87e6d447583a4fec721c2dbe0befd58 SHA512 eb5f0863b236603d39b6afcca772f86a7153f91bacbb49041ffc5efd5f22f0c028966da054ba92e0a30838e09fcf52fcabff40ef8138945c1b585ed234643e52 WHIRLPOOL 265da4265e6e0a3cc7ba2f22a796c6aef639f463e9558223a0eca578bcfe325c97feb42ca697066b7ec88161fa1e64b0dde19a0c17a4b2ed3c6462a863f82ecd
 EBUILD gitlab-gitaly-0.35.0-r1.ebuild 1108 SHA256 c041a2e7f8f29485a0a9ec56615fbcd75e5b0a7ca0afcff1ffad0b095efc0101 SHA512 868f9fb01ce5b78bd906e2ae8fa0093ae41931856bce25602c3cc2d109779afb7e643e0032d650bfa03a2424f8edb89dbcc680e7daa5a93d69545cd0c8c69263 WHIRLPOOL 2584b50d63e3aed372062b97d4c5093f520940fed0ade166c71d03ec7a50b6679da9544d9bcb7c6ba720f07de9ec54e6dca1f0bc3baf705828e41c642d4aa14a
 EBUILD gitlab-gitaly-0.6.0.ebuild 776 SHA256 08e08d43d9ec359f418d13cdfbd7c2560c236f8102cb2cc16739569ad112ac1e SHA512 7be112d99f8dc1353af718bc7551fb5c9e616179ce494853b60f77a099850abc689f25b0587db056ef1dd90dfa90b77cba72d6afb8e663841e0162667d4b7628 WHIRLPOOL ec245d5028174a264730997fa66907a187a7ef58ed4cecfb287bead932b8cbd2f2073311f0b8f5f8c5381e11a4c811dd5738e8bd0d357183f0fb3706e909899d
-MISC ChangeLog 2960 SHA256 aa5df7e02c98b8d51384a47cd991de36f7cbfee97d21e77243c56f4d5a93308a SHA512 5716f16b4b555829a04ce5ef1e48af9454f3804b84314a800831a852a67d21d6fbe1a1a65788efacbe562988098f452a650a70dbfc9eb58dffb4e68254e29b92 WHIRLPOOL d00a22f160ef6797f7928ba650163122035ed23893a77238b082b7fc97ec05cdf1f2e6497efd1915934f5f8abf8d4092380e63e5efae245a06a106a47ec5462c
+MISC ChangeLog 3184 SHA256 37c5b89a53c66bbbd3ae04457a65c86be69fcb317f10392089f9855c85bc006e SHA512 77cdebd717e4a5a68d5680d77c939c4b7a595e43d52c2b804e772cbc77b8a9b9e02d4b91ded09023b977166d912d8b085dcf99e55edcd302dc95b6f722b7dbbd WHIRLPOOL 852f967142aacd32dd9ca72484296ee83af91ade7da09eb90286bf7cb501c1e9fc029fe8fc479dc67bf3f32ab714d4513f07bb096fb27db61d674d680dc330ac
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
