@@ -1,8 +1,0 @@
-CONFIGFILE=/etc/gitlab/gitaly-config.toml
-RUNAS_USER=git
-RUNAS_GROUP=${RUNAS_USER}
-LOGFILE=/var/log/gitlab/gitlab-gitaly.log
-
-# This must match the setting in /etc/gitlab/gitaly-config.toml
-# If not using a socket, simply comment out or delete the next line.
-SOCKETDIR=/run/gitlab
