@@ -1,19 +1,0 @@
-#!/sbin/openrc-run
-
-start() {
-	ebegin "Starting gitlab-gitaly"
-
-	checkpath -f -m 640 -o ${RUNAS_USER}:${RUNAS_GROUP} ${LOFGILE}
-	[ -z "${SOCKETDIR}" ] || checkpath -d ${SOCKETDIR}
-
-	start-stop-daemon --start --exec /usr/bin/gitlab-gitaly --pidfile /run/gitlab-gitaly.pid \
-	--make-pidfile --background --user ${RUNAS_USER}:${RUNAS_GROUP} --stdout "${LOGFILE}" --stderr "${LOGFILE}" \
-	-- ${CONFIGFILE}
-	eend $?
-}
-
-stop() {
-	ebegin "Stopping gitlab-gitaly"
-	start-stop-daemon --stop --exec /usr/bin/gitlab-gitaly --pidfile /run/gitlab-gitaly.pid --user ${RUNAS_USER}:${RUNAS_GROUP}
-	eend $?
-}
