@@ -1,4 +1,9 @@
   06 Sep 2017; Manuel Friedli <manuel@fritteli.ch>
+  -files/gitlab-gitaly-0.10.0.conf, -files/gitlab-gitaly-0.10.0.init,
+  -gitlab-gitaly-0.16.0.ebuild:
+  www-servers/gitlab-gitaly:  Prune version 0.16.0 and unneeded files
+
+  06 Sep 2017; Manuel Friedli <manuel@fritteli.ch>
   -files/0002-gitlab-gitaly-0.10.0-fix-config.toml.example.patch,
   -gitlab-gitaly-0.11.0.ebuild, gitlab-gitaly-0.10.0.ebuild,
   gitlab-gitaly-0.3.0.ebuild, gitlab-gitaly-0.6.0.ebuild:
